// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorsViews ErrorsStatusbar displays error 1`] = `
<div>
  <div
    class="Ellipsis-sc-1dn9bou-0 gzqRPC"
  >
    <span
      class="styled__ErrorText-sc-1dtvgs1-29 dMsRZb"
      title="Test.Error: Test error description"
    >
      <i
        class="fa fa-exclamation-triangle IconContainer__I-sc-16whwc5-0 bXwiKG"
      />
       
      Test.Error: Test error description
    </span>
  </div>
</div>
`;

exports[`ErrorsViews ErrorsStatusbar displays nothing if no error 1`] = `<div />`;

exports[`ErrorsViews ErrorsView displays nothing if no errors 1`] = `<div />`;

exports[`ErrorsViews ErrorsView displays procedure link if unknown procedure 1`] = `
<div>
  <div
    class="styled__StyledHelpFrame-sc-1dtvgs1-14 IJQaq"
  >
    <div
      class="styled__StyledHelpContent-sc-1dtvgs1-15 jPcVVC"
    >
      <div
        class="styled__StyledHelpDescription-sc-1dtvgs1-16 buBBgk"
      >
        <div
          class="styled__StyledCypherErrorMessage-sc-1dtvgs1-22 izHDyp"
        >
          ERROR
        </div>
        <h4
          class="styled__StyledH4-sc-1dtvgs1-26 jXSkte"
        >
          Neo.ClientError.Procedure.ProcedureNotFound
        </h4>
      </div>
      <div
        class="styled__StyledDiv-sc-1dtvgs1-17 kkPWFM"
      >
        <pre
          class="styled__StyledPreformattedArea-sc-1dtvgs1-28 fxWKEH"
        >
          Neo.ClientError.Procedure.ProcedureNotFound: not found
        </pre>
      </div>
      <div
        class="styled__StyledLinkContainer-sc-1dtvgs1-19 eorHIm"
      >
        <a
          class="styled__StyledLink-sc-1dtvgs1-18 cLfBMz"
        >
          <i
            class="fa fa-play-circle-o IconContainer__I-sc-16whwc5-0 eTELIJ"
          />
           List available procedures
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ErrorsViews ErrorsView does displays an error 1`] = `
<div>
  <div
    class="styled__StyledHelpFrame-sc-1dtvgs1-14 IJQaq"
  >
    <div
      class="styled__StyledHelpContent-sc-1dtvgs1-15 jPcVVC"
    >
      <div
        class="styled__StyledHelpDescription-sc-1dtvgs1-16 buBBgk"
      >
        <div
          class="styled__StyledCypherErrorMessage-sc-1dtvgs1-22 izHDyp"
        >
          ERROR
        </div>
        <h4
          class="styled__StyledH4-sc-1dtvgs1-26 jXSkte"
        >
          Test.Error
        </h4>
      </div>
      <div
        class="styled__StyledDiv-sc-1dtvgs1-17 kkPWFM"
      >
        <pre
          class="styled__StyledPreformattedArea-sc-1dtvgs1-28 fxWKEH"
        >
          Test.Error: Test error description
        </pre>
      </div>
    </div>
  </div>
</div>
`;
